# Src/api/v1/workflow-runs.php
@@ -1,0 +1,12 @@
+<?php
+
+require_once 'session_validator.php';
+require_once '../../vendor/autoload.php';
+
+use GuiBranco\ProjectsMonitor\Library\Webhooks;
+use GuiBranco\ProjectsMonitor\Library\LogStream;
+
+LogStream::info("API request received", ["endpoint" => "GET /api/v1/workflow-runs"], "api");
+$webhooks = new Webhooks();
+$data = $webhooks->getWorkflowRuns();
+echo json_encode($data);
